--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">ShoppingList</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_second">SecondActivity</string>
+    <string name="Select_Your_Ingredients">Select Your Ingredients</string>
+    <string name="Add_To_Cart">add to cart</string>
+    <string name="Submit">Submit</string>
+    <string name="Hello">Hello</string>
+    <string name="Go_Back">GO Back</string>
 
 
 </resources>
