remove commented out code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="Add_To_Cart">add to cart</string>
     <string name="Submit">Submit</string>
     <string name="Hello">Hello</string>
-    <string name="Go_Back">GO Back</string>
+    <string name="Go_Back">Restart</string>
 
 
 </resources>
