--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,14 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_second">SelectedIngredients</string>
     <string name="Select_Your_Ingredients">Select Your Ingredients</string>
-    <string name="Add_To_Cart">add to cart</string>
+    <string name="Add_To_Cart">Add item</string>
     <string name="Submit">Submit</string>
     <string name="Hello">Hello</string>
     <string name="Go_Back">Restart</string>
-    <string name="removeLastItem">Remove last item</string>
+    <string name="removeLastItem">Remove item</string>
     <string name="NoIngredientsSelected">No ingredients have been selected</string>
     <string name="ingredientsCatergory">pop</string>
-
-
-
+    <string name="no_button">No Button</string>
+    <string name="you_have">You have </string>
+    <string name="items_in_the_cart">items in the cart</string>
 </resources>
