Remove unused code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
         <item>Onions</item>
         <item>Milk</item>
         <item>Spaghetti</item>
+        <item>Chocolate</item>
+        <item>More chocolate</item>
+        <item>Even more chocolate</item>
     </string-array>
 </resources>
