Fix word misspelling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
         <item>More chocolate</item>
         <item>Even more chocolate</item>
     </string-array>
+    <string name="title_activity_sss">sss</string>
 </resources>
